Fixed layout issue with long titles.

--- a/css/elements/character_sheet/prime_character_sheet.css
+++ b/css/elements/character_sheet/prime_character_sheet.css
@@ -539,6 +539,7 @@ h1.entityName
 	padding-left:5px;
 	margin-right:5px;
 	cursor: pointer;
+	text-align: right;
 }
 
 .statsContent .primesGroup .primeWrapper input
@@ -587,6 +588,7 @@ h1.entityName
 	padding-left:5px;
 	margin-right:5px;
 	cursor: pointer;
+	text-align: right;
 }
 
 .primeCharacterSheet input
